# mnemosyne

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml
mnemosyne/: __init__.py
mnemosyne/core/: config.py  kuzu_graph.py
mnemosyne/queries/: __init__.py  cli.py
mnemosyne/scripts/: post_install.py  sync.py
mnemosyne_pkg/: __init__.py  __main__.py  cli.py  hermes_sqlite.py  mcp_server.py  memory.py  openclaw.py  self_learning.py  sqlite_vec_store.py
