[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemosyne-memory"
version = "1.1.0"
description = "Local semantic memory stack for Hermes agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Filip", email = "filip@filspire.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kuzu>=0.4.0",
    "fastembed>=0.4.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
vec = [
    "sqlite-vec>=0.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
mnemosyne = "mnemosyne.queries.cli:main"

[project.urls]
Homepage = "https://github.com/skippyhelper-cpu/mnemosyne"
Repository = "https://github.com/skippyhelper-cpu/mnemosyne"

[tool.setuptools.packages.find]
where = ["."]
include = ["mnemosyne*"]

[tool.setuptools.package-data]
mnemosyne = ["py.typed"]
